# CTU

./: .gitignore  CMakeLists.txt  README.md  main.c
src/: Analyzer.c  Analyzer.h  Printer.c  Printer.h  Program_data.c  Program_data.h  Queue.c  Queue.h  Reader.c  Reader.h  Watchdog.c  Watchdog.h  core_counter.c  core_counter.h  main.c
test/: CMakeLists.txt  my_test.cpp
